minor changes to html/text overflow fixed(needs testing)/hover image opacity increased

--- a/views/profile-page/profile-page-style.css
+++ b/views/profile-page/profile-page-style.css
@@ -341,7 +341,6 @@ header p {
     width: 300px;
     border-radius: 4px;
     overflow: hidden;
-
 }
 
 /* Image Size */
@@ -350,6 +349,7 @@ header p {
     width:300px;
     height: 300px;
     object-fit: cover;
+    opacity:1;
 }
 
 .tiles article > .image:before {
@@ -433,35 +433,36 @@ header p {
     margin-bottom: 0;
 }
 
+/* Description */
 .tiles article > a .content .description
 {
     width:100%;
     word-break: break-all;
 }
 
-.tiles article#style1 > .image:before {
+/*.tiles article.style1 > .image:hover {
     background-color: #f2849e;
 }
 
-.tiles article#style2 > .image:before {
+.tiles article.style2 > .image:hover {
     background-color: #7ecaf6;
 }
 
-.tiles article#style3 > .image:before {
+.tiles article.style3 > .image:before {
     background-color: #7bd0c1;
 }
 
-.tiles article#style4 > .image:before {
+.tiles article.style4 > .image:before {
     background-color: #c75b9b;
 }
 
-.tiles article#style5 > .image:before {
+.tiles article.style5 > .image:before {
     background-color: #ae85ca;
 }
 
-.tiles article#style6 > .image:before {
+.tiles article.style6 > .image:before {
     background-color: #8499e7;
-}
+}*/
 
 
 * + .tiles {
@@ -620,9 +621,10 @@ body:not(.is-touch) .tiles article:hover > .image {
     transform: scale(1.1);
 }
 
+/* Image Opacity */
 body:not(.is-touch) .tiles article:hover > .image:before {
     background-color: #333333;
-    opacity: 0.35;
+    opacity: 0.5;
 }
 
 body:not(.is-touch) .tiles article:hover > .image:after {
